# hope-cookiecutters

./: .gitignore  Makefile  README.md  djlint.toml  pyproject.toml
django-application/{{cookiecutter.application_dir}}/: .gitignore  .importlinter  .pre-commit-config.yaml  LICENSE  _.envrc  _.gitignore  pyproject.toml  pytest.ini  ruff.toml  tox.ini
django-application/{{cookiecutter.application_dir}}/docs/src/: .pages
django-application/{{cookiecutter.application_dir}}/src/{{cookiecutter.package_name}}/: apps.py  models.py  urls.py
django-application/{{cookiecutter.application_dir}}/src/{{cookiecutter.package_name}}/templates/{{cookiecutter.package_name}}/: base.html
django-application/{{cookiecutter.application_dir}}/tests/: .coveragerc  conftest.py  test_imports.py
django-application/{{cookiecutter.application_dir}}/tests/_demoapp/: DEMODB.sqlite  manage.py
django-application/{{cookiecutter.application_dir}}/tests/_demoapp/demo/: __init__.py  apps.py  backends.py  callbacks.py  settings.py  urls.py  wsgi.py
django-project/{{cookiecutter.project_dir}}/: .dockerignore  .gitignore  .importlinter  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  _.envrc  _.gitignore  compose.yml  djlint.toml  manage.py  mkdocs.yaml  mypy.ini  pyproject.toml  pytest.ini  ruff.toml  tox.ini
django-project/{{cookiecutter.project_dir}}/.github/: CODEOWNERS  file-filters.yml
django-project/{{cookiecutter.project_dir}}/.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
django-project/{{cookiecutter.project_dir}}/.github/workflows/: docs.yml  issues.yml  label-pullrequest.yml  lint.yml  release.yml  test.yml
django-project/{{cookiecutter.project_dir}}/.semgrep/: Makefile
django-project/{{cookiecutter.project_dir}}/.semgrep/correctness/django/: django-no-default-token-generator.py  django-no-default-token-generator.yaml
django-project/{{cookiecutter.project_dir}}/.semgrep/security/logging/: exception-object-in-logger-extra.py  exception-object-in-logger-extra.yaml
django-project/{{cookiecutter.project_dir}}/.semgrep/security/requests/: no-use-requests-lib.yaml
django-project/{{cookiecutter.project_dir}}/.tx/: config
django-project/{{cookiecutter.project_dir}}/docker/: Dockerfile  Makefile  README.md
django-project/{{cookiecutter.project_dir}}/docker/conf/: nginx.conf.tpl  uwsgi.ini
django-project/{{cookiecutter.project_dir}}/docs/_scripts/: copy_logos.py  get_settings.py
django-project/{{cookiecutter.project_dir}}/docs/src/: .pages  contributing.md  docker.md  index.md
django-project/{{cookiecutter.project_dir}}/docs/src/images/: .gitignore
django-project/{{cookiecutter.project_dir}}/src/{{cookiecutter.package_name}}/: __init__.py  apps.py  celery.py  checks.py  exceptions.py  state.py
django-project/{{cookiecutter.project_dir}}/src/{{cookiecutter.package_name}}/admin/: __init__.py  base.py  constance.py  flags.py  user.py
django-project/{{cookiecutter.project_dir}}/src/{{cookiecutter.package_name}}/api/: auth.py  router.py  urls.py
django-project/{{cookiecutter.project_dir}}/src/{{cookiecutter.package_name}}/api/serializers/: __init__.py  group.py  permissions.py  user.py
django-project/{{cookiecutter.project_dir}}/src/{{cookiecutter.package_name}}/api/viewsets/: __init__.py  base.py  group.py  permissions.py  user.py
django-project/{{cookiecutter.project_dir}}/src/{{cookiecutter.package_name}}/config/: __init__.py  asgi.py  celery.py  logging_conf.py  settings.py  urls.py  wsgi.py
django-project/{{cookiecutter.project_dir}}/src/{{cookiecutter.package_name}}/config/fragments/: __init__.py  app.py  celery.py  constance.py  csp.py  debug_toolbar.py  flags.py  issues.py  mail.py  matomo.py  rest_framework.py  sentry.py  social_auth.py  streaming.py  tailwind.py  unfold.py
django-project/{{cookiecutter.project_dir}}/src/{{cookiecutter.package_name}}/management/commands/: develop.py  upgrade.py
django-project/{{cookiecutter.project_dir}}/src/{{cookiecutter.package_name}}/migrations/: 0001_initial.py  0002_alter_user_options_user_azure_id_user_display_name_and_more.py
django-project/{{cookiecutter.project_dir}}/src/{{cookiecutter.package_name}}/models/: __init__.py  base.py  key.py  user.py
django-project/{{cookiecutter.project_dir}}/src/{{cookiecutter.package_name}}/modules/security/: apps.py  backends.py
django-project/{{cookiecutter.project_dir}}/src/{{cookiecutter.package_name}}/social/: pipeline.py
django-project/{{cookiecutter.project_dir}}/src/{{cookiecutter.package_name}}/types/: django.pyi
django-project/{{cookiecutter.project_dir}}/src/{{cookiecutter.package_name}}/ui/: urls.py
django-project/{{cookiecutter.project_dir}}/src/{{cookiecutter.package_name}}/utils/: constance.py  flags.py  language.py  sentry.py
django-project/{{cookiecutter.project_dir}}/src/{{cookiecutter.package_name}}/web/: context_processors.py  urls.py
django-project/{{cookiecutter.project_dir}}/tests/: .coveragerc  conftest.py
django-project/{{cookiecutter.project_dir}}/tests/admin/: test_admin_smoke.py
django-project/{{cookiecutter.project_dir}}/tests/browser/: conftest.py
django-project/{{cookiecutter.project_dir}}/tests/extras/testutils/: perms.py  selenium.py
django-project/{{cookiecutter.project_dir}}/tests/extras/testutils/factories/: __init__.py  (+4 more)
django-project/{{cookiecutter.project_dir}}/tests/unit/: test_state.py
django-project/{{cookiecutter.project_dir}}/tests/unit/admin/: test_admin_smoke.py
django-project/{{cookiecutter.project_dir}}/tests/unit/api/: test_api_group.py  test_api_permission.py  test_api_schema.py  test_api_smoke.py  test_api_user.py
django-project/{{cookiecutter.project_dir}}/tests/unit/config/: test_celery.py  test_wsgi.py
django-project/{{cookiecutter.project_dir}}/tests/unit/models/: test_model_apikey.py
django-project/{{cookiecutter.project_dir}}/tests/unit/social/: test_social_pipeline.py
django-project/{{cookiecutter.project_dir}}/tests/unit/ui/: test_ui_errors.py  test_ui_login.py
django-project/{{cookiecutter.project_dir}}/tests/utils/: test_language.py
(+108 files in other folders)
